# kaku-shell

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: ai_config.rs  assist.rs  config_cmd.rs  doctor.rs  init.rs  main.rs  menu.rs  profile.rs  reset.rs
src/tui_core/: mod.rs  theme.rs
