[package]
name = "kaku-shell"
version = "0.1.0"
edition = "2021"
description = "A fast CLI that turns PowerShell into an AI coding terminal"
license = "MIT"
repository = "https://github.com/2233admin/kaku-shell"

[[bin]]
name = "kaku"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
crossterm = "0.28"
dirs = "5.0"
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.8"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
